# ESSE

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-AW  LICENSE-MIT  README.md  pubspec.yaml  rust.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: main.yml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/profile/: AndroidManifest.xml
assets/answers/: chinese_simplified.txt  english.txt
assets/logo/: logo_tether.pnga
core/: .gitignore  README.md  pubspec.yaml
core/android/: build.gradle  settings.gradle
core/android/src/main/: AndroidManifest.xml
core/ios/: esse_core.podspec
core/ios/Classes/: EsseCorePlugin.h  EsseCorePlugin.m  SwiftEsseCorePlugin.swift
core/lib/: esse_core.dart
core/linux/: CMakeLists.txt  esse_core_plugin.cc
core/linux/include/esse_core/: esse_core_plugin.h
core/macos/: esse_core.podspec
core/macos/Classes/: EsseCorePlugin.h  EsseCorePlugin.swift
core/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
core/test/: esse_core_test.dart
core/windows/: CMakeLists.txt  esse_core_plugin.cpp
core/windows/include/esse_core/: esse_core_plugin.h
core/windows/share/: esse.h
integration_test/: app_test.dart
ios/Runner/: Info-debug.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: account.dart  global.dart  main.dart  options.dart  provider.dart  rpc.dart  security.dart  session.dart  theme.dart
lib/apps/: chat_input.dart  primitives.dart
lib/apps/assistant/: answer.dart  message.dart  models.dart  page.dart  pages.dart  provider.dart
lib/apps/chat/: add.dart  detail.dart  list.dart  models.dart  provider.dart
lib/apps/cloud/: page.dart
lib/apps/dao/: detail.dart
lib/apps/dao/tmp/: add.dart  detail.dart  provider.dart
lib/apps/device/: models.dart  page.dart  provider.dart
lib/apps/domain/: models.dart  page.dart
lib/apps/file/: editor.dart  list.dart  models.dart  page.dart
lib/apps/group/: add.dart  detail.dart  list.dart  models.dart  provider.dart.1
lib/apps/group_chat/: add.dart  detail.dart  list.dart  models.dart  page.dart  provider.dart
lib/apps/jarvis/: detail.dart  message.dart  models.dart  page.dart  provider.dart
lib/apps/organization/: detail.dart
lib/apps/organization/tmp/: detail.dart  models.dart
lib/apps/service/: add.dart  list.dart  models.dart
lib/apps/wallet/: models.dart  page.dart
lib/l10n/: localizations.dart  localizations_en.dart  localizations_zh.dart
lib/models/: account.dart  friend.dart  message.dart
lib/pages/: account_domain.dart  account_generate.dart  account_quick.dart  account_restore.dart  device.dart  file.dart  friend.dart  friend_add.dart  home.dart
lib/pages/setting/: about.dart  network.dart  preference.dart  profile.dart
lib/provider/: account.dart  device.dart  session.dart
lib/utils/: adaptive.dart  better_print.dart  device_info.dart  emoji_lists.dart  emoji_picker.dart  file_image.dart  home_dir.dart  logined_cache.dart  mnemonic.dart  pick_file.dart  pick_image.dart  relative_time.dart  toast.dart
lib/utils/websocket/: MyWsChannel.dart  MyWsChannel_io.dart  MyWsChannel_unimpl.dart  MyWsChannel_web.dart
lib/widgets/: audio_player.dart  audio_recorder.dart  avatar.dart  button_text.dart  chat_input.dart  chat_message.dart  default_core_show.dart  default_home_show.dart  emoji.dart  input_text.dart  list_friend.dart  list_service.dart  list_system_app.dart  qr_scan.dart  select_avatar.dart  shadow_button.dart  shadow_dialog.dart  shadow_image.dart  show_contact.dart  show_pin.dart  socket_input.dart  transfer.dart  user_info.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Base.lproj/: MainMenu.xib
macos/Runner/Configs/: AppInfo.xcconfig
src/: account.rs  apps.rs  consensus.rs  daemon.rs  event.rs  global.rs  group.rs  layer.rs  lib.rs  migrate.rs  models.rs  primitives.rs  rpc.rs  server.rs  session.rs  storage.rs  utils.rs
src/apps/: mod.rs
src/apps/assistant/: migrate.rs  mod.rs  models.rs  rpc.rs
src/apps/chat/: layer.rs  mod.rs  models.rs  rpc.rs
src/apps/chat/models/: friend.rs  message.rs  request.rs
src/apps/cloud/: layer.rs  mod.rs  rpc.rs
src/apps/dao/: layer.rs  mod.rs  rpc.rs
src/apps/device/: mod.rs  models.rs  rpc.rs
src/apps/domain/: layer.rs  mod.rs  models.rs  rpc.rs
src/apps/file/: mod.rs  models.rs  rpc.rs
src/apps/group/: layer.rs  mod.rs  models.rs  rpc.rs
src/apps/group_chat/: common.rs  layer.rs  mod.rs  models.rs  rpc.rs
src/apps/jarvis/: mod.rs  models.rs  rpc.rs
src/apps/organization/: mod.rs  rpc.rs
src/apps/wallet/: mod.rs  models.rs  rpc.rs
src/group/: consensus.rs  handle.rs  mod.rs  models.rs  rpc.rs  running.rs
src/group/models/: friend.rs
src/layer/: running.rs
src/migrate/: account.rs  chat.rs  cloud.rs  consensus.rs  dao.rs  domain.rs  file.rs  group.rs  group_chat.rs  jarvis.rs  organization.rs  service.rs  session.rs  wallet.rs
src/models/: account.rs  session.rs
src/own/: consensus.rs  mod.rs  running.rs
src/utils/: answer.rs  crypto.rs  device_status.rs
src/utils/answer/: english.rs  simplified_chinese.rs
test/: widget_test.dart
types/: README.md
types/chat/: Cargo.toml
types/chat/src/: lib.rs
types/cloud/: Cargo.toml
types/cloud/src/: lib.rs
types/dao/: Cargo.toml
types/dao/src/: lib.rs
types/data/: Cargo.toml
types/data/src/: lib.rs  tdn.rs
types/domain/: Cargo.toml
types/domain/src/: lib.rs
types/group/: Cargo.toml
types/group/src/: lib.rs
types/primitives/: Cargo.toml
types/primitives/src/: lib.rs
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+19 files in other folders)
