[package]
name = "esse"
version = "0.1.0"
authors = ["CympleTech <dev@cympletech.com>"]
edition = "2021"
license = "MIT/Apache-2.0"

[lib]
name = "esse"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "esse"
path = "src/daemon.rs"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1.0"
log = "0.4"
rand = "0.8"
once_cell = "1.8"
simplelog = "0.11"
image = "0.23"
base64 = "0.13"
hex = "0.4"
sha2 = "0.10"
blake3 = "1.2"
bincode = "1.3"
aes-gcm = "0.9"
sysinfo = "0.21"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
web3 = { version = "0.17", default-features = false, features = ["http-tls", "signing"] }
tdn = { version = "0.6", default-features = false, features = ["full"] }
tdn_did = { version = "0.6" }
tdn_storage = { git = "https://github.com/cypherlink/tdn_storage", branch="main" }

chat_types = { git = "https://github.com/cympletech/esse_types", branch="main" }
group_types = { git = "https://github.com/cympletech/esse_types", branch="main" }
cloud_types = { git = "https://github.com/cympletech/esse_types", branch="main" }
domain_types = { git = "https://github.com/cympletech/esse_types", branch="main" }
organization_types = { git = "https://github.com/cympletech/esse_types", branch="main" }
#chat_types = { path = "../esse_types/chat" }
#group_types = { path = "../esse_types/group" }
#organization_types = { path = "../esse_types/organization" }
#domain_types = { path = "../esse_types/domain" }
#cloud_types = { path = "../esse_types/cloud" }

openssl = { version = "0.10", features = ["vendored"] } # Add for cross-compile.

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19", default-features = false }
