[package]
name = "esse"
version = "0.1.0"
authors = ["CympleTech <dev@cympletech.com>"]
edition = "2021"
license = "MIT/Apache-2.0"

[workspace]
members = [
    "types/primitives",
    "types/chat",
    "types/group",
    "types/dao",
    "types/domain",
    "types/cloud",
    "types/data",
]

[lib]
name = "esse"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "esse"
path = "src/daemon.rs"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1.0"
log = "0.4"
rand = "0.8"
once_cell = "1.8"
simplelog = "0.11"
image = "0.23"
base64 = "0.13"
hex = "0.4"
sha2 = "0.10"
argon2 = "0.3"
blake3 = "1.3"
bincode = "1.3"
aes-gcm = "0.9"
sysinfo = "0.21"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
web3 = { version = "0.17", default-features = false, features = ["http-tls", "signing"] }
tdn = { version = "0.7", default-features = false, features = ["full"] }
tdn_did = { version = "0.7" }
tdn_storage = { git = "https://github.com/cympletech/tdn", branch="main" }
chat_types = { version = "0.1", path = "./types/chat" }
group_types = { version = "0.1", path = "./types/group" }
cloud_types = { version = "0.1", path = "./types/cloud" }
domain_types = { version = "0.1", path = "./types/domain" }
dao_types = { version = "0.1", path = "./types/dao" }
data = { version = "0.1", path = "./types/data" }

openssl = { version = "0.10", features = ["vendored"] } # Add for cross-compile.

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19", default-features = false }


# DEBUG patch.
[patch.crates-io]
tdn = { git = "https://github.com/cympletech/tdn" }
tdn_types = { git = "https://github.com/cympletech/tdn" }
tdn_did = { git = "https://github.com/cympletech/tdn" }
