[package]
name = "esse"
version = "0.1.0"
authors = ["CympleTech <dev@cympletech.com>"]
edition = "2021"
license = "MIT/Apache-2.0"

[workspace]
members = [
    "types/primitives",
    "types/group",
    "types/dao",
    "types/domain",
    "types/cloud",
    "types/data",
]

[lib]
name = "esse"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "esse"
path = "src/daemon.rs"
required-features = ["daemon"]

[features]
default = []
daemon = ["console-subscriber"]

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
aes-gcm = "0.9"
anyhow = "1.0"
argon2 = "0.3"
base64 = "0.13"
bincode = "1.3"
blake3 = "1.3"
hex = "0.4"
image = "0.24"
once_cell = "1.9"
rand = "0.8"
sha2 = "0.10"
sysinfo = "0.23"
serde = { version = "1", features = ["derive"] }
tdn = { version = "0.8", default-features = false, features = ["std"] }
tdn_did = { version = "0.8" }
tdn_storage = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
web3 = { version = "0.18", default-features = false, features = ["http-tls", "signing"] }

esse_primitives = { version = "0.1", path = "./types/primitives" }
group_types = { version = "0.1", path = "./types/group" }
cloud_types = { version = "0.1", path = "./types/cloud" }
domain_types = { version = "0.1", path = "./types/domain" }
dao_types = { version = "0.1", path = "./types/dao" }
data = { version = "0.1", path = "./types/data" }

openssl = { version = "0.10", features = ["vendored"] } # Add for cross-compile.
console-subscriber = { version = "0.1", optional = true } # only use in bin daemon.

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19", default-features = false }

# DEBUG patch.
[patch.crates-io]
chamomile = { git = "https://github.com/cympletech/chamomile" }
chamomile_types = { git = "https://github.com/cympletech/chamomile" }
tdn = { git = "https://github.com/cympletech/tdn" }
tdn_types = { git = "https://github.com/cympletech/tdn" }
tdn_did = { git = "https://github.com/cympletech/tdn" }
tdn_storage = { git = "https://github.com/cympletech/tdn" }
