[package]
name = "chat_types"
version = "0.1.0"
authors = ["CympleTech <dev@cympletech.com>"]
edition = "2021"
readme = "README.md"
description = "ESSE common chat types."
repository = "https://github.com/cympletech/esse_types/chat"
keywords = ["distributed", "p2p", "chat", "ESSE"]
license = "MIT/Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
tdn_types = { version = "0.6", default-features = false }