[package]
name = "domain_types"
version = "0.1.0"
authors = ["CympleTech <dev@cympletech.com>"]
edition = "2021"
readme = "README.md"
description = "ESSE domain service types."
repository = "https://github.com/cympletech/esse_types/group"
keywords = ["distributed", "p2p", "domain", "ESSE"]
license = "MIT/Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
tdn_types = { version = "0.7", default-features = false }
